--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -5,6 +5,7 @@
   --text:#333;
   --diveder:#ecf0f1; 
   --font-family: "Roboto", sans-serif;
-  --box-shadow: 0 4px 12px 0 rgba(0, 0, 0, .15);
+  --box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.3),
+    0 1px 3px 1px rgba(60, 64, 67, 0.15);
   
 }
