--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -4,3 +4,30 @@
 @use 'reset.scss' as *;
 @use 'utils.scss' as * ;
 @use'variables.scss' as *; 
+
+
+.container {
+  min-height: 100vh;
+  display: grid;
+  grid: 
+   "header" auto
+   "content" 1fr
+   "footer" auto / 
+   auto 
+}
+
+header {
+  grid-area: header;
+  background: green;
+  padding: 20px;
+}
+
+.content {
+  grid-area: content;
+  padding: 20px;
+}
+
+footer {
+  grid-area: footer;
+  padding: 20px;
+}
