--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -1,25 +1,53 @@
-@use 'base.scss' as *; 
-@use 'classes.scss' as *;
-@use 'media-queries.scss' as *;
-@use 'reset.scss' as *;
-@use 'utils.scss' as * ;
-@use'variables.scss' as *; 
-
+@use "base.scss" as *;
+@use "classes.scss" as *;
+@use "media-queries.scss" as *;
+@use "reset.scss" as *;
+@use "utils.scss" as *;
+@use "variables.scss" as *;
 
 .container {
   min-height: 100vh;
   display: grid;
-  grid: 
-   "header" auto
-   "content" 1fr
-   "footer" auto / 
-   auto 
+  grid:
+    "header" auto
+    "content" 1fr
+    "footer" auto /
+    auto;
 }
 
 header {
   grid-area: header;
-  background: green;
+  background: var(--dark);
   padding: 20px;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+  .logo{
+    color:var(--logo);
+  }
+  a {
+    color: white;
+  }
+  .header-brand {
+    font-size: 4rem;
+    font-weight: 700;
+
+  }
+  ul {
+    display: flex;
+    li {
+      .header-nav {
+        font-size: 1.8rem;
+        padding: 0 10px;
+      }
+      .active {
+        font-weight: 700;
+        text-decoration: underline;
+       
+      }
+    }
+  }
 }
 
 .content {
@@ -30,4 +58,8 @@ header {
 footer {
   grid-area: footer;
   padding: 20px;
+  background:var(--dark);
+  color:white;
+  text-align: center;
+  font-size: 1.8rem;
 }
