--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,12 +1,11 @@
 :root {
-  --primary:#2ecc71;
-  --dark:#178e48; 
-  --logo:#f1c40f;
-  --accent:#2c3e50;
-  --text:#333;
-  --diveder:#ecf0f1; 
+  --primary: #2ecc71;
+  --dark: #178e48;
+  --logo: #f1c40f;
+  --accent: #2c3e50;
+  --text: #333;
+  --divider: #ecf0f1;
   --font-family: "Roboto", sans-serif;
   --box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.3),
     0 1px 3px 1px rgba(60, 64, 67, 0.15);
-  
 }
