mise en place du formulaire dans form.js et gestion des erreurs

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -3,6 +3,7 @@
   --dark: #178e48;
   --logo: #f1c40f;
   --accent: #2c3e50;
+  --error:#c0392b;
   --text: #333;
   --divider: #ecf0f1;
   --font-family: "Roboto", sans-serif;
