--- a/src/form/form.scss
+++ b/src/form/form.scss
@@ -22,7 +22,7 @@
       }
       input,
       textarea {
-        border: 1px solid var(--divider);
+        border: 1px solid var(--logo);
         padding: 1rem;
         outline: 0;
         border-radius: 3px;
