Récupération des articles depuis API et création d'un fonction pour mettre a jour les articles créé . test Ok

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -4,6 +4,7 @@
   --logo: #f1c40f;
   --accent: #2c3e50;
   --error:#c0392b;
+  --danger:#c0392b;
   --text: #333;
   --divider: #ecf0f1;
   --hint:#95a5a6;
