--- a/src/assets/styles/_classes.scss
+++ b/src/assets/styles/_classes.scss
@@ -25,6 +25,11 @@
     background: white;
     color: var(--primary);
   }
+  &-danger {
+    border: 1px solid var(--logo);
+    background: white;
+    color: var(--danger);
+  }
 }
 
 .text {
