--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -23,36 +23,72 @@ header {
   flex-flow: row nowrap;
   justify-content: space-between;
   align-items: center;
-  .logo{
-    color:white;
+
+  .logo {
+    color: white;
   }
-  .logo:hover{
-    color:var(--logo);
+  .logo:hover {
+    color: var(--logo);
   }
   a {
     color: white;
   }
-  a:hover{
+  a:hover {
     color: var(--logo);
   }
 
   .header-brand {
     font-size: 4rem;
     font-weight: 700;
-
   }
-  ul {
-    display: flex;
-    li {
-      .header-nav {
-        font-size: 1.8rem;
-        padding: 0 10px;
+  .header-menu {
+    position: relative;
+    ul {
+      display: flex;
+      @include xs {
+        display: none;
       }
-      .active {
-        font-weight: 700;
-        text-decoration: underline;
-       
+
+      li {
+        .header-nav {
+          font-size: 1.8rem;
+          padding: 0 10px;
+        }
+        .active {
+          font-weight: 700;
+          text-decoration: underline;
+        }
       }
+    }
+    .header-menu-icon{
+      display: none;
+      font-size: 3rem;
+      color: var(--logo);
+      @include xs {
+        display: block;
+      }
+    }
+    .mobile-menu {
+      display: none;
+      position: absolute;
+      box-shadow: var(--box-shadow);
+      top: 9.5rem;
+      right: 1rem;
+      padding: 3rem 1.5rem;
+      width: 20rem;
+      background: white;
+      ul{
+        display: block;
+        li{
+          margin:2rem 0;
+          a{
+            color: var(--text);
+          }
+        }
+      }
+    }
+    .mobile-menu.open {
+      display: block;
     }
   }
 }
@@ -66,8 +102,8 @@ header {
 footer {
   grid-area: footer;
   padding: 20px;
-  background:var(--dark);
-  color:white;
+  background: var(--dark);
+  color: white;
   text-align: center;
   font-size: 1.8rem;
 }
