--- a/src/form/form.scss
+++ b/src/form/form.scss
@@ -1,3 +1,4 @@
+@use "../assets/styles/media-queries" as *;
 .content {
   display: flex;
   justify-content: center;
@@ -11,6 +12,9 @@
     border-radius: 3px;
     display: flex;
     flex-direction: column;
+    @include xs {
+      padding: 2rem;
+    }
     .form-group {
       margin-bottom: 2rem;
       display: flex;
