--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-@use './assets/styles/media-queries' as *; 
+@use "./assets/styles/media-queries" as *;
 
 .content {
   background: var(--divider);
@@ -14,14 +14,15 @@
     .article {
       background: white;
       padding: 0 5rem;
-      @include xs {
-        padding: 0 2rem;
-      }
       border-radius: 0.3rem;
       margin-bottom: 5rem;
       display: flex;
       flex-direction: column;
       align-items: center;
+
+      @include xs {
+        padding: 0 2rem;
+      }
 
       img {
         height: 6rem;
@@ -34,6 +35,10 @@
         color: var(--logo);
         margin-top: 2rem;
         margin-bottom: 0;
+        @include xs {
+          text-align: center;
+          margin-bottom: 2rem;
+        }
       }
       .article-author {
         color: var(--hint);
